Fixes portfolio item spacing on desktop

--- a/stylesheets/components/_portfolio-item.scss
+++ b/stylesheets/components/_portfolio-item.scss
@@ -11,6 +11,10 @@
 	.col-md-3 {
 		padding-right: 0px;
 	}
+
+	img {
+		margin-bottom: 15px;
+	}
 }
 
 .portfolio-item {
