--- a/stylesheets/layout/_responsive.scss
+++ b/stylesheets/layout/_responsive.scss
@@ -79,10 +79,6 @@
 	.portfolio-row {
 		margin-left: -15px;
 		margin-right: 0px;
-
-		img {
-			margin-bottom: 15px;
-		}
 	}
 
 	.thumbnail {
